# Sonar

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  main.py  orchestrator.py  pipeline.py  presets.py  pyproject.toml
agent/: prompts.py
agents/: __init__.py  analyzer.py  base.py  coordinator.py  planner.py  researcher.py  reviewer.py  scout.py  synthesizer.py  verifier.py
agents/researcher/: __init__.py  prompt.py  tools.py
agents/reviewer/: __init__.py  prompt.py  tools.py
agents/verifier/: __init__.py  prompt.py  tools.py
fetchers/: __init__.py  base.py  directory.py  local_file.py  url.py
report/: renderer.py  schema.py
report/templates/: base.html
report/templates/sections/: analysis.html  concepts.html  learning_path.html  overview.html  paper_list.html  prerequisites.html  summary.html  toc.html
stages/: analyze.py  fetch.py  models.py  plan.py  research.py  review.py  synthesize.py
stages/prompts/: __init__.py  plan.py  research.py  schemas.py  synthesize.py  verify.py
tests/: conftest.py  test_extract.py  test_fetch_file.py  test_fetch_real.py  test_fetch_unit.py  test_filesystem.py  test_pipeline.py  test_quality.py  test_renderer.py
tools/: classify.py  extract.py  fetch.py  filesystem.py  llm.py  quality.py  search.py
